--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -71,6 +71,10 @@ h2 {
     color: #2c73e8 !important;
 }
 
+.navbar ul.navbar-nav li i {
+    font-size: 22px;
+}
+
 .navbar ul.navbar-nav li form {
     position: absolute;
     background-color: white;
@@ -81,7 +85,7 @@ h2 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 400;
 }
 
@@ -90,7 +94,6 @@ p {
     background-color: #e2dfdf;
     width: 100%;
 }
-
 
 footer div.copyright a {
     color: #fff;
@@ -386,22 +389,22 @@ header .row>div:last-of-type button a {
 }
 
 .prices .item>div:last-of-type ul {
-    text-align: center;
+    /* text-align: center; */
     margin: 0 auto;
     padding: 0;
-    width: 80%;
-    margin-bottom: 50px;
+    width: 90%;
+    margin-bottom: 10px;
 }
 
 .prices .item>div:last-of-type ul li {
-    padding: 20px 0;
-    list-style-type: none;
-    border-top: 1px solid #052242;
+    padding: 10px 5px;
+    list-style-type: disc;
+    /* border-top: 1px solid #052242; */
     color: #052242;
 }
 
 .prices .item>div:last-of-type ul li:last-of-type {
-    border-bottom: 1px solid #052242;
+    /* border-bottom: 1px solid #052242; */
 }
 
 .prices .item>div:last-of-type button {
@@ -424,10 +427,16 @@ header .row>div:last-of-type button a {
     box-shadow: 6px 6px 10px #d9d5d5, -6px -6px 10px #d9d5d5;
     position: relative;
     bottom: 60px;
+    
 }
 
 .prices .row .item.active button {
     background-color: #052242;
+}
+
+.full-high {
+    height: 85%; /* prices heigh */
+
 }
 
 .prices .row .item.active>div:first-of-type {
@@ -435,6 +444,10 @@ header .row>div:last-of-type button a {
     background-color: #2c73e8;
 }
 
+.prices .row .item.active>div:last-of-type {
+   background-color: #fff;
+   text-align: left;
+}
 .prices .row .item.active>div:last-of-type p {
     margin-top: 30px;
 }
@@ -895,8 +908,12 @@ html {
 }
 
 .background {
-    background-size: cover;
+    background-size: 95%;
+    /* Sets the image size to 90% of the screen */
     background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents repeating the image */
     background-attachment: fixed;
     /* Ensures the background stays fixed while scrolling */
     opacity: 0.5;
@@ -910,6 +927,7 @@ html {
     z-index: -1;
     /* Keeps it behind the content */
 }
+
 
 
 .content {
@@ -1023,4 +1041,8 @@ html {
     /* Hover effect */
     transform: scale(1.05);
     /* Slightly enlarges on hover */
+}
+
+.right{
+    margin-right: 50px;
 }
