dev v0.1.7 fix title size

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -47,7 +47,7 @@
     <header class="text-uppercase" id="home">
         <div class="row" style="background-image: url({% static 'web/imgs/header-ai.jpg' %});">
             <div class="col-xl-5 col-lg-12">
-                <p><span>Glanz Fix</span> <br> Klare Sicht, Perfekter Glanz</p>
+                <p style="font-size: 35px;"><span>Glanz Fix</span> <br> Klare Sicht, Perfekter Glanz</p>
 
             </div>
             <div class="col-xl-7 col-lg-12">
