--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light text-uppercase font-weight-bold fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img width="75" src="{% static 'web/imgs/logo.jpg' %}"
+            <a class="navbar-brand" href="/"><img width="75" src="{% static 'web/imgs/logo.jpg' %}"
                     alt="/" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#show-menu"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
     <header class="text-uppercase" id="home">
         <div class="row" style="background-image: url({% static 'web/imgs/header-ai.jpg' %});">
             <div class="col-xl-5 col-lg-12">
-                <p style="font-size: 35px;"><span>Glanz Fix</span> <br> Klare Sicht, Perfekter Glanz</p>
+                <p style="font-size: 35px;"><span>Glanz Fiix</span> <br> Klare Sicht, Perfekter Glanz</p>
 
             </div>
             <div class="col-xl-7 col-lg-12">
@@ -64,14 +64,14 @@
 
             <div class="row">
                 <div class="col-lg-7 col-12 d-flex">
-                    <p>Glanz Fix ist Ihr zuverlässiger Partner für professionelle Glas- und Fensterreinigung. Wir sorgen
+                    <p>Glanz Fiix ist Ihr zuverlässiger Partner für professionelle Glas- und Fensterreinigung. Wir sorgen
                         mit höchster Sorgfalt und modernen Reinigungstechniken für streifenfreien Glanz – ob in privaten
                         Haushalten oder Geschäftsräumen. Unser Anspruch ist es, Qualität, Zuverlässigkeit und
                         Kundenzufriedenheit in den Mittelpunkt zu stellen.
                         Mit unserer Erfahrung und einem Auge fürs Detail garantieren wir eine gründliche und schonende
                         Reinigung aller Glasflächen. Dabei setzen wir auf umweltfreundliche Reinigungsmittel und
                         effiziente Methoden, um beste Ergebnisse zu erzielen. Ihre Zufriedenheit ist unser Erfolg –
-                        lassen Sie Ihre Glasflächen mit Glanz Fix in neuem Licht erstrahlen.</p>
+                        lassen Sie Ihre Glasflächen mit Glanz Fiix in neuem Licht erstrahlen.</p>
                 </div>
                 <div class="col-lg-5 col-12">
                     <div class="blue-shadow"></div>
@@ -151,7 +151,7 @@
             <div id="company"></div>
             <h2 class="text-center text-uppercase">Unsere Dienstleistung<span></span></h2>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-12 col-md-12 col-12">
                     <div class="item f-item active">
                         <div>
                             <h5>Schaufenster</h5>
@@ -171,7 +171,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-12 col-md-12 col-12">
                     <div class="item active">
                         <div>
                             <h5>Restaurants</h5>
@@ -196,11 +196,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-12 col-md-12 col-12">
                     <div class="item active">
                         <div>
                             <h5>Salons</h5>
-                            
+
                         </div>
                         <div>
                             <span>Reinigung von Mode-, Parfüm- und Friseursalons:</span>
@@ -218,7 +218,53 @@
                     </div>
                 </div>
             </div>
-            <br>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="item active">
+                        <div>
+                            <h5>Schaufenster</h5>
+                        </div>
+                        <div style="margin: 10px;">
+                            <span>Reinigung der Schaufenster von Geschäften (Fläche von 1-7 m<sup>2</sup>):</span>
+                            <ul>
+                                <li>Einmal im Monat: 55€</li>
+                                <li>Zweimal im Monat: 45€</li>
+                                <li>Dreimal oder mehr: 35€</li>
+                                <li>Zusätzliche Dienstleistung: Erste Bodenreinigung kostenlos.</li>
+                            </ul>
+                            <span>Zusatzdienstleistung für Restaurants:</span>
+                            <ul>
+                                <li>Reinigung des Bodens, der Wände und der Küchengeräte (Backofen, Gasherd, etc.): 375€</li>
+                                <li>Wir garantieren die Einhaltung europäischer Hygienestandards und die Verwendung umweltfreundlicher Reinigungsmittel.</li>
+                                <li>Die Dienstleistung gilt für Restaurants mit einer Fläche von bis zu 65 m<sup>2</sup>.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="item active">
+                        <div>
+                            <h5>Salons</h5>
+                        </div>
+                        <div style="margin: 10px;">
+                            <span>Reinigung von Mode-, Parfüm- und Friseursalons:</span>
+                            <ul>
+                                <li>Preisspanne: 100€ - 275€</li>
+                                <li>Der Preis hängt von der Größe des Geschäfts ab.</li>
+                            </ul>
+                            <span>Die Leistungen beinhalten:</span>
+                            <ul>
+                                <li>Reinigung des Bodens (Porzellan oder Holz).</li>
+                                <li>Reinigung der Spiegel und Ausstellungsflächen.</li>
+                                <li>Reinigung der Außenfassade des Geschäfts, um Kunden anzulocken.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12">
                     <div class="item active">
@@ -226,14 +272,27 @@
                             <h5>Angebote und Rabatte</h5>
 
                         </div>
-                        <div>
+                        <div style="margin: 10px;">
                             <ul>
-                                <li>Wir bieten attraktive Rabatte für Verträge, die länger als 6 Monate laufen.
-                                </li>
-                                <li>Zögern Sie nicht, uns für weitere Informationen oder maßgeschneiderte Angebote zu
-                                    kontaktieren. Wir freuen uns auf neue Herausforderungen im Bereich der
-                                    Dienstleistung für Sauberkeit und stehen Ihnen gerne zur Verfügung
-                                </li>
+                                <li>Rabatte für Verträge, die länger als 6 Monate laufen.</li>
+                                <li>Zögern Sie nicht, uns für weitere Informationen oder spezielle Angebote zu kontaktieren.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="item active">
+                        <div>
+                            <h5>Warum Sie uns wählen sollten:</h5>
+
+                        </div>
+                        <div style="margin: 10px;">
+                            <ul>
+                                <li>Verpflichtung zur Servicequalität: Wir verwenden umweltfreundliche Produkte und gewährleisten die Einhaltung europäischer Standards.</li>
+                                <li>Wettbewerbsfähige Preise: Wir bieten die besten Preise bei exzellentem Service, der auf Ihre Bedürfnisse abgestimmt ist.</li>
+                                <li>Individuelle Dienstleistungen: Wir bieten flexible Reinigungspläne, die sich an Ihren Anforderungen orientieren.</li>
                             </ul>
                         </div>
 
@@ -249,9 +308,8 @@
         <div class="container">
             <div class="contact-form">
                 <h1>Kontakt und Buchung:</h1>
-                <p>Haben Sie Fragen? Kontaktieren Sie uns gerne oder senden Sie eine Anfrage über unsere Website. Wir
-                    stehen Ihnen zur Verfügung, um Ihre Wünsche zu erfüllen.
-                </p>
+                <p>Haben Sie eine Frage? Zögern Sie nicht, uns zu kontaktieren oder eine Anfrage über unsere Website zu senden. Wir sind hier, um Ihre Bedürfnisse zu erfüllen.</p>
+                <p>Buchen Sie Ihren Termin ganz einfach über unsere Website!</p>
                 <form> <!--  action="{% url 'send_email' %}" -->
                     {% csrf_token %}
                     <input type="text" name="name" placeholder="Ihr Name">
@@ -313,28 +371,32 @@
             <div class="container">
                 <div class="d-flex justify-content-between text-uppercase">
                     <ul>
-                        <li class="right">Glanz Fix</li>
+                        <li class="right">Glanz Fiix</li>
                         <li><i class="fas fa-phone"></i> (+49) 15757809132</li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@glanzfix.com">info@glanzfix.com</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@alrajoub-glanzfiix.de">info@alrajoub-glanzfiix.de</a></li>
                         <li><i class="fas fa-map-marker-alt"></i> Altenbrückstraße 12, 40599 Düsseldorf</li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="main-part">
-            <div id="media" class="container">
-                <div class="d-flex text-uppercase">
+            <div class="container">
+                <div class="d-flex justify-content-between text-uppercase">
                     <ul>
-                        <li><a href="/"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="/"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="/"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="/"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:rechnung@glanzfiix.de">rechnung@glanzfiix.de</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:service@glanzfiix.de">service@glanzfiix.de</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:rechnung@glanzfiix.de">rechnung@glanzfiix.de</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:support@glanzfiix.de">support@glanzfiix.de</a></li>
+                        <!--<li><a href="/"><i class="fab fa-facebook-f"></i></a></li>-->
+                        <!--<li><a href="/"><i class="fab fa-twitter"></i></a></li>-->
+                        <!--<li><a href="/"><i class="fab fa-linkedin-in"></i></a></li>-->
+                        <!--<li><a href="/"><i class="fab fa-google-plus-g"></i></a></li>-->
                     </ul>
                 </div>
             </div>
         </div>
         <div class="copyright text-center">
-            <p>Copyright © All rights reserved</p>
+            <p>Alle Rechte vorbehalten © - glanzfiix Company.</p>
         </div>
     </footer>
     <script src="{% static 'web/js/jquery-3.3.1.min.js' %}"></script>
